--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -75,8 +75,10 @@ img.header-image {
 /* Estilos para el contenedor de las imágenes */
 .rotating-images-container {
     position: relative;
-    width: 300px; /* Ajusta el ancho según el tamaño de tus imágenes */
-    height: 300px; /* Ajusta la altura según el tamaño de tus imágenes */
+    width: 100%;
+    max-width: 100px; /* Ajusta el ancho máximo según desees */
+    height: 0;
+    padding-top: 100%; /* Creamos un contenedor cuadrado con padding para que la imagen ocupe todo el espacio */
     overflow: hidden;
 }
 
@@ -84,11 +86,12 @@ img.header-image {
 .rotating-image {
     width: 100%;
     height: 100%;
+    object-fit: cover; /* Ajustamos el tamaño de la imagen para que se muestre completa sin distorsionarla */
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0;
-    transition: opacity 1s ease-in-out; /* Ajusta la duración de la transición según desees */
+    transition: opacity 1s ease-in-out;
 }
 
 /* Aparecer primera imagen */
@@ -97,11 +100,6 @@ img.header-image {
 }
 
 .custom-image {
-    width: 400px; /* Cambiar al tamaño deseado */
-    height: auto; /* Para mantener la proporción original de la imagen */
-    /* Agrega otros estilos si es necesario */
+    width: 100%;
+    height: 100%;
 }
-
-
-
-
