Se están componiendo errores de las imagenes, además de agregar el @media

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -103,3 +103,11 @@ img.header-image {
     width: 100%;
     height: 100%;
 }
+
+/* @media query para pantallas más pequeñas */
+@media (max-width: 767px) {
+    /* Agrega aquí los estilos responsivos para pantallas pequeñas */
+    .rotating-images-container {
+        max-width: 80px; /* Ajusta el ancho máximo según desees en pantallas pequeñas */
+    }
+}
