--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -76,9 +76,9 @@ img.header-image {
 .rotating-images-container {
     position: relative;
     width: 100%;
-    max-width: 100px; /* Ajusta el ancho máximo según desees */
+    max-width: 300%; /* Ajusta el ancho máximo según desees */
     height: 0;
-    padding-top: 100%; /* Creamos un contenedor cuadrado con padding para que la imagen ocupe todo el espacio */
+    padding-top: 100%; /* Ajusta este valor para mantener la proporción */
     overflow: hidden;
 }
 
@@ -86,13 +86,15 @@ img.header-image {
 .rotating-image {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ajustamos el tamaño de la imagen para que se muestre completa sin distorsionarla */
+    object-fit: contain; /* Ajustamos el tamaño de la imagen para que quepa completamente sin recortar ni distorsionar */
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0;
     transition: opacity 1s ease-in-out;
 }
+
+
 
 /* Aparecer primera imagen */
 .rotating-image:first-child {
@@ -102,12 +104,4 @@ img.header-image {
 .custom-image {
     width: 100%;
     height: 100%;
-}
-
-/* @media query para pantallas más pequeñas */
-@media (max-width: 767px) {
-    /* Agrega aquí los estilos responsivos para pantallas pequeñas */
-    .rotating-images-container {
-        max-width: 80px; /* Ajusta el ancho máximo según desees en pantallas pequeñas */
-    }
 }
