--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -1,10 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-}
-
 /* Definición del estilo para la clase "centered" */
 .centered {
     text-align: center;
@@ -119,4 +112,24 @@ img.header-image {
     content: "\2022"; /* Código del punto • */
     position: absolute;
     left: 0;
+}
+
+@media (min-width:900px){
+    div {        
+        font-family: Arial, sans-serif;
+        color: black;
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+    }
+}
+
+@media (max-width:899px){
+    div {        
+        font-family: monospace, sans-serif;
+        color: #333;
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+    }
 }
