--- a/static/SCSS/styles.scss
+++ b/static/SCSS/styles.scss
@@ -1,5 +1,3 @@
-// styles.scss
-
 // Importar estilos de Bootstrap
 @import 'https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css';
 
@@ -15,9 +13,14 @@ $font-size-large_1: 15px;
 .table {
     background-color: $primary-color;
     font-size: $font-size-large;
-    border: 2px solid $second-color; // Agregamos un borde sólido de 2px
-    border-collapse: collapse; // Colapsamos los bordes para que se vean mejor
-  }
-.word{
+    border: 2px solid $second-color;
+    border-collapse: collapse;
+    width: 100%; // Hacer que la tabla ocupe todo el ancho disponible
+
+    // Estilos para hacer la tabla responsive
+    overflow-x: auto; // Agregar barra de desplazamiento horizontal si es necesario
+}
+
+.word {
     font-size: $font-size-large_1;
 }
